# dlsite-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  genre.rs  interface.rs  lib.rs  product_api.rs  utils.rs
src/circle/: mod.rs  options.rs
src/client/: common.rs  genre.rs  mod.rs
src/client/circle/: mod.rs  options.rs  query.rs
src/client/product/: ajax.rs  html.rs  mod.rs  review.rs  test.rs
src/client/product_api/: interface.rs  mod.rs  test.rs
src/client/search/: macros.rs  mod.rs  options.rs  query.rs
src/interface/: mod.rs  product.rs  query.rs
src/product/: ajax.rs  html.rs  mod.rs  review.rs  test.rs  tests.rs
src/product_api/: interface.rs  mod.rs  test.rs
src/search/: mod.rs  options.rs
