[package]
name = "dlsite"
version = "0.1.6"
edition = "2021"
description = "DLsite client"
license = "MIT"

[dependencies]
chrono = "0.4.24"
reqwest = { version = "0.11.17", features = [
  "rustls-tls",
], default-features = false }
scraper = "0.17"
serde = "1.0.163"
serde-aux = "4.2.0"
serde_json = "1.0.96"
thiserror = "1.0.40"
url = "2.3.1"
tokio = { version = "1", features = ["macros"] }
regex = "1.8.3"
tracing = "0.1"
strum = { version = "0.25", features = ["derive"] }
serde_with = { version = "3.3.0", features = ["macros"] }
serde_path_to_error = "0.1"
serde_repr = "0.1.16"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace", "std"] }
tracing-subscriber = "0.3"
rand = "0.8"
test-case = "3.1.0"
