[package]
name = "dlsite"
version = "0.2.0"
edition = "2021"
description = "DLsite client"
license = "MIT"
repository = "https://github.com/ozonezone/dlsite-rs"

[dependencies]
chrono = "0.4.39"
reqwest = { version = "0.12.9", features = [
  "rustls-tls",
], default-features = false }
scraper = "0.22"
serde = "1.0.216"
serde-aux = "4.5.0"
serde_json = "1.0.133"
thiserror = "2.0.9"
url = "2.3.1"
tokio = { version = "1", features = ["macros"] }
regex = "1.11.1"
tracing = "0.1"
strum = { version = "0.26.3", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["macros"] }
serde_path_to_error = "0.1"
serde_repr = "0.1.19"
serde_ignored = { version = "0.1.10", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace", "std"] }
tracing-subscriber = "0.3"
rand = "0.8"
test-case = "3.1.0"

[features]
default = []
warn = ["dep:serde_ignored"]
serde = []
strict = []
