[package]
name = "dlsite"
version = "0.2.0"
edition = "2021"
description = "DLsite client"
license = "MIT"
repository = "https://github.com/ozonezone/dlsite-rs"

[dependencies]
tokio = { version = "1", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.9" }
scraper = "0.23.1"

serde = "1.0.216"
serde-aux = "4.5.0"
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["macros"] }
serde_path_to_error = "0.1"
serde_repr = "0.1.19"
serde_ignored = { version = "0.1.10", optional = true }

thiserror = "2.0.9"
strum = { version = "0.27.1", features = ["derive"] }
url = "2.3.1"
regex = "1.11.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace", "std"] }
tracing-subscriber = "0.3"
rand = "0.9"
test-case = "3.1.0"

[features]
default = ["unknown-field-log"]
# Outputs log when unknown fields are found in response.
unknown-field-log = ["dep:serde_ignored"]
# Fails when unknown fields are found in response.
unknown-field-error = []

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
